--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
     font-family: "Whisper", cursive;
   }
 
+  .orbitron {
+    font-family: "Orbitron", sans-serif;
+  }
+
   @keyframes glitch {
     0% {
       background-color: #000;
